--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "laravel-echo": "^1.11.3",
+        "pusher-js": "^7.0.6",
         "react-bootstrap": "^2.1.2",
         "react-router-dom": "^6.2.1"
     }
