--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
