--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "laravel-echo": "^1.11.3",
         "pusher-js": "^7.0.6",
         "react-bootstrap": "^2.1.2",
+        "react-moment": "^1.1.2",
         "react-router-dom": "^6.2.1",
         "react-toast-notifications": "^2.5.1"
     }
