--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.11.3",
+        "moment": "^2.29.4",
         "pusher-js": "^7.0.6",
         "react-bootstrap": "^2.1.2",
         "react-moment": "^1.1.2",
